<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account"
        android:title="Account">
        <menu>
            <item
                android:id="@+id/appCatalog"
                android:icon="@drawable/playstore"
                android:title="@string/appCatalog"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/content"
                android:icon="@drawable/content"
                android:title="@string/content"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/device_details"
                android:icon="@drawable/ic_device_details"
                android:title="@string/device_details"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/notification"
                android:icon="@drawable/ic_notification"
                android:title="@string/notification"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item
        android:id="@+id/appColor"
        android:title="App">
        <menu>
            <item
                android:id="@+id/colorScheme"
                android:icon="@drawable/ic_system_color_mode"
                android:title="@string/color_scheme"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item
        android:id="@+id/privacy"
        android:title="@string/privacy">
        <menu>
            <item
                android:id="@+id/helpCenter"
                android:icon="@drawable/ic_help"
                android:title="@string/help_center"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/privacyPolicy"
                android:icon="@drawable/ic_policy"
                android:title="@string/privacy_policy"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/termOfUse"
                android:icon="@drawable/ic_file"
                android:title="@string/term_of_use"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>