<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_app_dialog_title"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDialogTitle"/>

        <TextView
            android:id="@+id/tvDialogDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_app_dialog_description"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
            app:layout_constraintStart_toStartOf="parent"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playStoreUrlInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDialogDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlayStoreUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/play_store_url_hint"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRequest"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/request_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playStoreUrlInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>