<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".features.enrollment.presentation.view.EnrollActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background_decorate"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="CruxLogo"
            android:src="@drawable/crux_logo" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpSlider"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnroll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:text="@string/scan_qr_code"
            android:fontFamily="@font/roboto"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerateQrCode"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/generate_qr_code"
            android:fontFamily="@font/roboto"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddNewDeviceUser"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_new_device_user"
            android:fontFamily="@font/roboto"
            app:cornerRadius="15dp" />

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="8dp">-->

<!--            <TextView-->
<!--                android:id="@+id/tvRegistertxt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:text="New User? "-->
<!--                android:textSize="14sp"-->
<!--                android:fontFamily="@font/roboto_light"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tvRegister"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:text="Register"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/roboto_light"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:textSize="14sp" />-->

<!--        </LinearLayout>-->

    </LinearLayout>

</LinearLayout>